--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-bootstrap-icons": "^1.11.6",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.6.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
